html stuff you know

--- a/src/assets/static/template/index.html
+++ b/src/assets/static/template/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hanged Game</title>
 </head>
 <body>
-
+    <head>
+        <h1>The Hanged Game</h1>
+    </head>
+cc c moi
+    <footer>
+        <p>Project lead by A.Nassuif</p>
+        <p>With the participation of M.Soumare, S.Cointin, D.Samaky</p>
+    </footer>
 </body>
 </html>
