added display in front

--- a/src/assets/static/template/index.html
+++ b/src/assets/static/template/index.html
@@ -3,15 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Hanged Game</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <head>
-        <h1>The Hanged Game</h1>
+        <h1>Le jeu du pendu</h1>
     </head>
-cc c moi
+    <div class="container-parent">
+    <div class="container" id="score">
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+    </div>
+
+    <div class="container" id="game">
+        <div class="game" id="right-letters">
+            <br>
+        </div>
+        <div class="game" id="wrong letters">
+            
+        </div>
+    </div>
+
+    <div class="container" id="input-letters">
+        <br>
+    </div>
+    </div>
+
     <footer>
         <p>Project lead by A.Nassuif</p>
-        <p>With the participation of M.Soumare, S.Cointin, D.Samaky</p>
+        <p>With the participation of M.Soumare, S.Cointin, D.Samaky & L.Bayon</p>
     </footer>
 </body>
 </html>
